<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>survey</name>
  <version>1.0.0</version>
  <description>Maze model</description>

  <maintainer email="earl.freedom.ea@gmail.com">Andrey Penkovskiy</maintainer>

  <license>-</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>

    <build_type>ament_cmake</build_type>

  </export>

</package>
